syntax = "proto3";

enum ProtoCardAttribute {
    ProtoAttrPower = 0;
    ProtoAttrSoul = 1;
    ProtoAttrLevel = 2;
}

enum CardState {
    StateStanding = 0;
    StateRested = 1;
    StateReversed = 2;
}
